--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qc/date-round",
-  "version": "0.0.0-alpha",
+  "version": "0.0.0",
   "description": "Rounds a date to the nearest interval.",
   "keywords": [
     "closest",
